syntax = "proto3";

package organic_unit;

option go_package = "server/pb/organic_unit;organic_unitpb";

import "google/protobuf/timestamp.proto";

// OrganicUnit model
message OrganicUnit {
  string id = 1;
  string name = 2;
  string acronym = 3;
  string brand = 4;
  string level = 5;
  string description = 6;
  string parent_id = 7;
  bool is_active = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  bool is_deleted = 11;
  google.protobuf.Timestamp deleted_at = 12;
  string deleted_by = 13;
}

// Request messages
message CreateOrganicUnitRequest {
  string name = 1;
  string acronym = 2;
  string brand = 3;
  string level = 4;
  string description = 5;
  string parent_id = 6;
}

message GetOrganicUnitRequest {
  string id = 1;
}

message UpdateOrganicUnitRequest {
  string id = 1;
  string name = 2;
  string acronym = 3;
  string brand = 4;
  string level = 5;
  string description = 6;
  string parent_id = 7;
  bool is_active = 8;
}

message DeleteOrganicUnitRequest {
  string id = 1;
  string deleted_by = 2;
}

message ListOrganicUnitsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  bool is_active = 4;
  bool include_deleted = 5;
  string parent_id = 6;
}

message GetOrganicUnitsByParentRequest {
  string parent_id = 1;
  bool include_inactive = 2;
}

message ActivateOrganicUnitRequest {
  string id = 1;
}

message DeactivateOrganicUnitRequest {
  string id = 1;
}

// Response messages
message CreateOrganicUnitResponse {
  OrganicUnit organic_unit = 1;
  string message = 2;
}

message GetOrganicUnitResponse {
  OrganicUnit organic_unit = 1;
}

message UpdateOrganicUnitResponse {
  OrganicUnit organic_unit = 1;
  string message = 2;
}

message DeleteOrganicUnitResponse {
  string message = 1;
}

message ListOrganicUnitsResponse {
  repeated OrganicUnit organic_units = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetOrganicUnitsByParentResponse {
  repeated OrganicUnit organic_units = 1;
}

message ActivateOrganicUnitResponse {
  string message = 1;
}

message DeactivateOrganicUnitResponse {
  string message = 1;
}

// OrganicUnit service
service OrganicUnitService {
  rpc CreateOrganicUnit(CreateOrganicUnitRequest) returns (CreateOrganicUnitResponse);
  rpc GetOrganicUnit(GetOrganicUnitRequest) returns (GetOrganicUnitResponse);
  rpc UpdateOrganicUnit(UpdateOrganicUnitRequest) returns (UpdateOrganicUnitResponse);
  rpc DeleteOrganicUnit(DeleteOrganicUnitRequest) returns (DeleteOrganicUnitResponse);
  rpc ListOrganicUnits(ListOrganicUnitsRequest) returns (ListOrganicUnitsResponse);
  rpc GetOrganicUnitsByParent(GetOrganicUnitsByParentRequest) returns (GetOrganicUnitsByParentResponse);
  rpc ActivateOrganicUnit(ActivateOrganicUnitRequest) returns (ActivateOrganicUnitResponse);
  rpc DeactivateOrganicUnit(DeactivateOrganicUnitRequest) returns (DeactivateOrganicUnitResponse);
}
